--- a/style.css
+++ b/style.css
@@ -1,475 +1,466 @@
 body {
-    font-family: 'Raleway', sans-serif;
-    margin-left:55px;
-    margin-right: 77px;
-    margin-top: 48px;
+  font-family: 'Raleway', sans-serif;
+  max-width: 1400px;
+  margin:auto;
 }
 
-ul{
-    list-style-type: none;
-    display: flex;
-}
-
-h1 {
-    font-weight : 700;
-    font-size: 22px;
-}
-
-
-h3{
-    font-weight: 700;
-    font-size: 18px;
-    color: black;
-    margin-left: 10px;
-}
-
-h4{
-    font-weight: 700;
-    font-size: 16px;
-    color: black;
-}
-
-p {
-    font-weight: 500;
-    font-size: 15px;
-    color: black;
+a{
+  text-decoration: none;
+  color:black;
 }
 
 /*HEADER*/
 
-header{
-
-    display: flex;
-    align-items: center;
-    flex-direction:row;
-    justify-content: space-between;
+header img {
+  height: 19px;
+  width: 62px;
+  margin-left: 55px;
+  margin-top: 44px;
 }
 
-
-.nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex end;
+header {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  margin-right: 50px;
+  padding-right:27px;
 }
 
-nav a {
-    align-items: center;
-    font-weight : 400 ;
-    font-size: 16px;
-    color: black;
-    text-decoration: none;
-    padding-left: 33.5px;
-    padding-right: 33.5px;
+header nav{
+  display: flex;
+  flex-direction: row;
 }
 
-.nav a:hover {
-    color: #0065FC;
-    border-top: 2px solid #0065FC;
-    padding-top: 46px;
+nav a{
+  display: flex;
+  justify-content: center;
+  width:162px;
+  padding-top:48px;
+
 }
 
-#logo img {
-    position: absolute;
-    height: 19px;
-    
-}
-
-#logo {
-    display: flex;
-    flex-direction: row;
+nav a:hover{
+  border-top: 2px solid #0065FC;
+  padding-top: 46px;
+  color:blue;
 }
 
 /*SLOGAN*/
 
-#slogan-section{
-    display: flex;
-    flex-direction: column;
+.slogan-section{
+  display: flex;
+  flex-direction: column;
+  margin-left: 55px;
 }
 
 .slogan-infos {
-    display: flex;
-    flex-direction: column;
-    padding-top: 63px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 63px;
 }
 
 /*BAR DE RECHERCHE*/ 
 
 .recherche {
-    display: flex;
-    
+  display: flex;
 }
 
 .icon-search {
-    width: 50px;
-    background: #F2F2F2;
-    border: 1px solid #F2F2F2;
-    border-radius: 15px 0px 0px 15px; 
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-     }
+  width: 50px;
+  background: #F2F2F2;
+  border: 1px solid #F2F2F2;
+  border-radius: 15px 0px 0px 15px; 
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
 
 
 .search-bar {
-    height: 46px;
-    font-size:18px;
-    font-weight: 700;
-    background: white;
-    border: 1px solid #F2F2F2;
-    padding-left: 17px;   
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 46px;
+  font-size:18px;
+  font-weight: 700;
+  background: white;
+  border: 1px solid #F2F2F2;
+  padding-left: 17px;   
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search-bar:focus {
-    outline: none;
+  outline: none;
     
 }
 .search-bar::placeholder {
-    color:black;
-    font-weight : bold ;
+  color:black;
+  font-weight : bold ;
 }
 
 .search-button{
-    font-weight: 700;
-    font-size: 18px;
-    text-align: center;
-    color: white;
-    padding: 15px 16px;
-    background: #0065FC;
-    border-style: none;
-    height: 49px;
-    width: 132px;
-    border-radius: 0px 15px 15px 0px;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: white;
+  padding: 15px 16px;
+  background: #0065FC;
+  border-style: none;
+  height: 49px;
+  width: 132px;
+  border-radius: 0px 15px 15px 0px;
 }
 
 button:hover {
-    background-color: #0255d3;
-    cursor:pointer;
+  background-color: #0255d3;
+  cursor:pointer;
 }
 .fa-search{
-    color: transparent;
-  }
+  color: transparent;
+}
 
 /*FILTRES*/
 
 .filtre-section{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top:32px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top:32px;
+  margin-left: 62px;
 }
 
 .filtres{
-    border: 2px solid #D9D9D9;
-    background-color: white;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    height: 48px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-right:30px;
+  border: 2px solid #D9D9D9;
+  background-color: white;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 48px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right:30px;
 }
 
 
 .icon-filtres{
-    color: #0065FC;
+  color: #0065FC;
 }
 
 .filtres:hover{
-    
-    background-color: #DEEBFF;  
-    border-color: transparent;
-    cursor: pointer;
+  background-color: #DEEBFF;  
+  border-color: transparent;
+  cursor: pointer;
 }
 
 
 .title-filtres{
-    margin-left: 7px;
-    margin-right: 30px;
+  margin-left: 7px;
+  margin-right: 30px;
 }
 
 /*INFOS*/
 
 
 .infos {
-    display: flex;
-    align-items: center;
-    margin-top: 39px;
-    margin-bottom: 39px;
+  display: flex;
+  align-items: center;
+  margin-top: 39px;
+  margin-bottom: 39px;
 }
 
 .infos .icon-infos i{
-    color:#0065FC;
-    border:1px solid #D9D9D9;
-    border-radius: 50%;
-    height: 24px;
-    width: 24px;
-    margin-right: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  color:#0065FC;
+  border:1px solid #D9D9D9;
+  border-radius: 50%;
+  height: 24px;
+  width: 24px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 59px;
 }
 
 /*ACCOMODATIONS*/
 
-main{
-    display: flex;
-    flex-direction: row;
-  }
+.firstpart{
+  display: flex;
+  margin-right: 50px;
+  margin-left: 50px;
+  border: #0065FC 5px solid;
+}
 
 .accommodation-section{
-    background: #F2F2F2;
-    width: 880px;
-    height: auto;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    margin-right: 40px;
-    
-
-  }
+  background: #F2F2F2;
+  width: 60%;
+  height: auto;
+  border-radius: 20px;
+  margin-right: 40px;
+}
   
-/*lign1*/ 
+.lign1 {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 40px;
+  margin-left: 40px;
+  margin-bottom:30px ;
+}
 
-  .lign1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 23px;
-    flex-wrap: wrap;
-  }
+.lign2{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 40px;
+  margin-left: 40px;
+  margin-bottom:40px ;
+ 
+    
+}
  
 .accommodation-section img{
-    object-fit: cover;
-    width: 100%;
-    height: 124px;
-    border-radius: 20px 20px 0 0;
-    border: 5px solid #FFFFFF;
-  }
+  object-fit: cover;
+  width: 100%;
+  height: 124px;
+  border-radius: 20px 20px 0 0;   
+  margin:auto;
+  
+}
   
 .card-accommodation{
-    width: 30%;
-    height: auto;
-    background: white;
-    border-radius: 20px;
-    box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
-    cursor: pointer;
-  }
+  background-color: #FFFFFF;
+  width: 29%;
+  height: auto;
+  border-radius: 20px;
+  box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
+  cursor: pointer;
+  border:5px solid #ffffff;
   
+}
 
-  .card-accommodation:hover{
-    transform: scale(1.1);
-  }
+.card-accommodation:hover{
+  transform: scale(1.1);
+}
   
-  .accommodation-section h2{
-    font-weight : 700;
-    font-size: 22px;  
-    padding-left: 40px;
-    padding-top: 42px;
-  }
-  .text-picture{
-    margin-top: 4px;
-    margin-left: 16px;
-    line-height: 9px;
-  }
+.accommodation-section h2{
+  font-weight : 700;
+  font-size: 22px;  
+  margin: 42px 0px 23px 40px;
+}
   
-  .text-picture h4{
-    margin-top: 0px;
-  }
+.text-picture-accommodation{
+  margin-top: 11px;
+  line-height: 9px;
+  margin-left: 16px;
+}
+  
+.card-accommodation h4{
+  font-size: 16px;
+  font-weight: 700;
+  margin: auto;
+}
 
-  .img-accomodation{
-    display: flex;
-    justify-content: center;
-    padding: 3px;
-    
-  }
-  
-  .star{
-    font-size: 90%;
-  }
+.card-accommodation p{
+  font-weight: 600;
+  font-size: 14px;
+}
 
-  /*lign2*/ 
 
-  .lign2{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 23px;
-    flex-wrap: wrap;
-  }
+.star-accommodation{
+  font-size: 90%;
+}
   
- .colorblue{
-    color: #0065fc;
-  }
- .colorgrey{
-    color: #d6d1d1;
-  }
+.colorblue{
+  color: #0065fc;
+}
+.colorgrey{
+  color: #d6d1d1;
+}
   
- span{
-    font-size: 18px;    
-    margin-left: 44px;
-    margin-top: 40px;
-    font-weight: 600;
-    cursor: pointer;
-    font-size: 110%;
-  }
+ span{  
+  margin-left: 44px;
+  font-weight: 700;
+  cursor: pointer;
+  font-size: 113%;
+}
 
   /*POPULAR*/
 
-  .popular-section{
-    background: #F2F2F2;
-    width: 30%;
-    height: auto;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    padding-left: 37px;
-    padding-right: 40px;
-    
-  }
-
-  .popular-section img {
-    object-fit: cover;
-    height: 133px;
-    width: 137px;
-    border-radius: 20px 0px 0px 20px;
-    border: 5px solid #FFFFFF;
-  }
+.popular-section{
+  background: #F2F2F2;
+  width: auto;
+  height: 100%;
+  border-radius: 20px;
+}
 
 .title-popular{
-    display: flex;
-    justify-content: space-between;
-    flex-direction:row;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction:row;
+  align-items: center;
+  margin-left: 40px;
+  margin-right: 50px;
+  
+}
+
+.fa-chart-line{
+  font-size: 25px;
+  color: #0065FC;
+}
+
+.card-popular{
+  display: flex;
+  width: auto;
+  height: 30%;
+  background: white;
+  margin-bottom: 33px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.card-popular:hover{
+  transform: scale(1.1);
   }
 
-  .card-popular{
-    display: flex;
-    flex-direction: row;
-    height: 144px;
-    width: 343px;
-    background: white;
-    border-radius: 20px;
-    box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
-    cursor: pointer;
-    margin-bottom: 33px;
+.card-popular img {
+  object-fit: cover;
+  width: 132px;
+  height: 144px;
+  border-radius: 20px 0 0 20px;
+  border:5px solid #ffffff;
+}
+
+.bloc-popular{
+  margin-left: 37px;
+  margin-right: 40px;
+}
+
+  .star-popular{
+    font-size: 90%;
+    margin-top: 44px;
+    margin-bottom: 12px;
+  }
+  .text-picture-popular{
+    margin-left: 15px;
+    margin-top: 16px;
+  }
+  
+  .card-popular h4{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    text-align: left;
+    margin: 0;
   }
 
-  .card-popular:hover{
-    transform: scale(1.1);
-  }
+  .card-popular p{
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 16px;
+    text-align: left;
+    margin-top: 7px;
 
-  .fa-chart-line{
-    font-size: 25px;
-    color: #0065FC;
   }
-
+  
 
 
   /*ACTIVITY*/
 
 .activity-section{
-    display: flex;
-    width: 100%;
-    height: auto;
-    flex-direction: row;
-    border: 1px solid black;
-    flex-wrap: wrap;
-    
+  display: flex;
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+  margin-bottom: 61px; 
 }
 
 .activity-section h2{
-    font-weight : 700;
-    font-size: 22px;  
-    padding-left: 50px;
-    padding-top: 60px;
+  font-weight: 700;
+  font-size: 22px;  
+  margin-top: 60px;
+  margin-left:50px;
 }
+
 .card-lign {
-    display: flex;
-    height: auto;
-    flex-direction: row;
-    border: 1px solid red;
-    flex-wrap: no-wrap;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-left:50px;
+  margin-right:53px
+    
 }
 
 .card-activity
 {
-    width: 25%;
-    height: auto;
-    margin-bottom: 33px;
-    border-radius: 20px;
-    box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1); 
-    cursor: pointer;
+  width: 22%;
+  height: auto;
+  border-radius: 20px;
+  box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1); 
+  cursor: pointer;
 }
 
 .card-activity img{
-    object-fit: cover;
-    height: 389px;
-    width: 302px;
-    border-radius: 20px 20px 0 0; 
+  object-fit: cover;
+  height: 389px;
+  width: 100%;
+  border-radius: 20px 20px 0 0; 
 }
 
 .card-activity:hover{
-    transform: scale(1.1);
+  transform: scale(1.1);
   }
 
 .card-activity h4{
-    font-weight: 700;
-    font-size: 16px;
-    color: black;
-    margin-left: 19px;
+  font-weight: 700;
+  font-size: 16px;
+  color: black;
+  margin-left: 19px;
+  font-weight: 700;
+  margin-top: 20px;
 }
 
-.text-activity{
-    font-weight: 700;
-    margin-left: 19px;
-    margin-top: 20px;
-  }
+
 
 /*FOOTER*/
 
-footer ul{
-    list-style-type: none;
-
-}
-
-footer h4{
-    font-weight: 700;
-    font-size: 119%;
-    line-height: 50px;
-  }
-
-footer a{
-    line-height: 30px;
-    color: black;
-  }
-
 footer{
-    background-color: #F2F2F2;
-
+  
+  background:#F2F2F2;
+  display: flex;
+  padding-top: 45px;
+  margin-left: 48px;
+  margin-right:53px;   
 }
 
 .section-footer{
-    flex: 1;
-    margin-left: 40px;
+  width: 30%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin-left: 70px;
+ 
 }
-.bloc-footer{
-    width: 100%;
-    background: #F2F2F2;
-    height: 300px;
-    display: flex;
-    padding-top: 40px;
-    margin-left: 0;
+
+footer h4{
+  font-weight:700;
+  font-size: 18px;
+  color: black;
+  line-height: 50px;
 }
+
+footer a{
+  font-weight:400;
+  font-size: 16px;
+  line-height: 30px;
+  list-style-type: none;
+  text-decoration: none;
+  color: black;
+  margin-left: -40px;
+}
+footer ul{
+  list-style-type: none;
+}
+
