--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ line-height: 20px;
   display: flex;
   margin-right: 50px;
   margin-left: 50px;
-  border: 5px solid rgb(212, 105, 16);
+  border: 5px solid rgb(212, 45, 16);
 }
 
 .accommodation-section{
@@ -247,6 +247,7 @@ line-height: 20px;
   box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
   cursor: pointer;
   border:5px solid #ffffff;
+  transition: 0.4s;
 }
 
 .card-accommodation:hover{
@@ -312,6 +313,7 @@ line-height: 20px;
   width: 30%;
   height: 626px;
   border-radius: 20px;
+  border: 5px blue solid;
 }
 
 .title-popular{
@@ -321,6 +323,7 @@ line-height: 20px;
   align-items: center;
   margin-left: 40px;
   margin-right: 50px;
+ 
 }
 
 .fa-chart-line{
@@ -337,6 +340,7 @@ line-height: 20px;
   border-radius: 20px;
   box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
   cursor: pointer;
+  transition: 0.4s;
 }
 
  .card-popular a{
@@ -399,6 +403,7 @@ line-height: 20px;
   height: auto;
   flex-direction: column;
   margin-bottom: 61px; 
+  
 }
 
 .activity-section h2{
@@ -424,6 +429,7 @@ line-height: 20px;
   border-radius: 20px;
   box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1); 
   cursor: pointer;
+  transition: 0.4s;
 }
 
 .card-activity img{
