--- a/style.css
+++ b/style.css
@@ -196,7 +196,6 @@ line-height: 20px;
   display: flex;
   margin-right: 50px;
   margin-left: 50px;
-  border: 5px solid rgb(212, 45, 16);
 }
 
 .accommodation-section{
@@ -205,21 +204,15 @@ line-height: 20px;
   height: 626px;
   border-radius: 20px;
   margin-right: 40px;
-  border: 5px solid rgb(187, 13, 240);
-  
 }
 
-.bloc-accommodation{
-  border: 5px blue solid;
- 
-}
+
 .lign1 {
   display: flex;
   justify-content: space-between;
   margin-right: 40px;
   margin-left: 40px;
   margin-bottom:30px ;
-  border: 5px solid rgb(214, 8, 8);
 }
 
 .lign2{
@@ -228,7 +221,6 @@ line-height: 20px;
   margin-right: 40px;
   margin-left: 40px;
   margin-bottom:40px ;
-  border: 5px solid rgb(255, 0, 0);   
 }
  
 .accommodation-section img{
@@ -263,22 +255,19 @@ line-height: 20px;
 .text-picture-accommodation{
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: -30px;
+  width: 80%;
+  height: 70px;
   margin-left: 12px;
-  border: #0065FC solid 5px;
 }
   
 .card-accommodation h4{
-  font-size: 16px;
-  font-weight: 700;
+  font-size: 13px;
   text-align: left;
   margin: 0;
 }
 
 .card-accommodation p{
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 11px;
   line-height: 12px;
   text-align: left;
   margin-top: 7px;
@@ -286,7 +275,7 @@ line-height: 20px;
 }
 
 .star-accommodation{
-  margin-top: -5%;
+  margin-top: -5px;
   font-size: 70%;
 }
   
@@ -303,7 +292,6 @@ line-height: 20px;
   font-weight: 700;
   cursor: pointer;
   font-size: 113%;
-  border: #0065FC solid 5px;
 }
 
   /*POPULAR*/
@@ -313,7 +301,6 @@ line-height: 20px;
   width: 30%;
   height: 626px;
   border-radius: 20px;
-  border: 5px blue solid;
 }
 
 .title-popular{
@@ -376,18 +363,17 @@ line-height: 20px;
   .text-picture-popular{
     margin-left: 2%;
     margin-top: 16px;
-    border: 5px blue solid;
   }
   
   .text-picture-popular h4{
-    font-size: 16px;
+    font-size: 13px;
     line-height: 118%;
     text-align: left;
     margin: 0;
   }
 
   .text-picture-popular p{
-    font-size: 14px;
+    font-size: 11px;
     line-height: 12px;
     text-align: left;
     margin-top: 7px;
