--- a/style.css
+++ b/style.css
@@ -45,24 +45,25 @@ nav a:hover{
   color:blue;
 }
 
-/*SLOGAN*/
+/*TAGLINE*/
 
-.slogan-section{
+.tagline-section{
   display: flex;
   flex-direction: column;
   margin-left: 55px;
 }
 
-.slogan-infos {
+.tagline-infos {
   display: flex;
   flex-direction: column;
   padding-top: 63px;
 }
 
-/*BAR DE RECHERCHE*/ 
+/*SEARCH BAR*/ 
 
-.recherche {
+.search-bar {
   display: flex;
+  flex-direction: row;
 }
 
 .icon-search {
@@ -76,8 +77,8 @@ nav a:hover{
 }
 
 
-.search-bar {
-  height: 46px;
+.input {
+  height: 49px;
   font-size:18px;
   font-weight: 700;
   background: white;
@@ -85,16 +86,15 @@ nav a:hover{
   padding-left: 17px;   
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
 }
 
-.search-bar:focus {
+.input:focus {
   outline: none;
     
 }
-.search-bar::placeholder {
+.input::placeholder {
   color:black;
-  font-weight : bold ;
 }
 
 .search-button{
@@ -105,7 +105,7 @@ nav a:hover{
   padding: 15px 16px;
   background: #0065FC;
   border-style: none;
-  height: 49px;
+  height: 52.5px;
   width: 132px;
   border-radius: 0px 15px 15px 0px;
 }
@@ -118,53 +118,57 @@ button:hover {
   color: transparent;
 }
 
-/*FILTRES*/
+/*FILTERS*/
 
-.filtre-section{
+.filter-section{
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  margin-top:32px;
+  margin-top: 32px;
   margin-left: 62px;
+  margin-right: 50px;
 }
 
-.filtres{
+.title-filter{
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+.allcard-filter{
+  display: flex;
+  width: 100%;
+}
+.card-filter{
   border: 2px solid #D9D9D9;
   background-color: white;
   border-radius: 25px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
-  align-content: center;
+  margin-left: 20px;
+  width: auto;
   height: 48px;
   padding-left: 20px;
-  padding-right: 20px;
-  margin-right:30px;
 }
 
-
-.icon-filtres{
-  color: #0065FC;
-}
-
-.filtres h3 {
-font-size: 17px;
-font-weight: 700;
-line-height: 20px;
-}
-
-.filtres:hover{
+.card-filter h3 {
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 21px;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 100%;
+  }
+  
+.card-filter:hover{
   background-color: #DEEBFF;  
   border-color: transparent;
   cursor: pointer;
 }
+  
 
-
-.title-filtres{
-  margin-left: 7px;
-  margin-right: 30px;
+.icon-filter{
+  color: #0065FC;
 }
 
 /*INFOS*/
@@ -175,62 +179,52 @@ line-height: 20px;
   align-items: center;
   margin-top: 39px;
   margin-bottom: 39px;
+  margin-right: 50px;
+  margin-left: 59px;
 }
 
-.infos .icon-infos i{
+.icon-infos i{
   color:#0065FC;
   border:1px solid #D9D9D9;
   border-radius: 50%;
   height: 24px;
   width: 24px;
-  margin-right: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 59px;
+}
+.infos p{
+  margin-left: 11px;
+}
+/*ACCOMODATIONS/POPULAR*/
+
+.bloc-accommodation-popular{
+  display: flex;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 /*ACCOMODATIONS*/
 
-.bloc-accommodation-popular{
-  display: flex;
-  margin-right: 50px;
-  margin-left: 50px;
-}
 
 .accommodation-section{
   background: #F2F2F2;
-  width: 60%;
+  width: 65%;
   height: 626px;
   border-radius: 20px;
   margin-right: 40px;
 }
-
-
-.lign1 {
-  display: flex;
-  justify-content: space-between;
+.bloc-accommodation{
   margin-right: 40px;
   margin-left: 40px;
-  margin-bottom:30px ;
 }
 
-.lign2{
+.lign{
   display: flex;
   justify-content: space-between;
-  margin-right: 40px;
-  margin-left: 40px;
-  margin-bottom:40px ;
+  margin-bottom:40px;
 }
- 
-.accommodation-section img{
-  object-fit: cover;
-  width: 100%;
-  height: 124px;
-  border-radius: 20px 20px 0 0;   
-  margin:auto;
-}
-  
+
 .card-accommodation{
   background-color: #FFFFFF;
   width: 30%;
@@ -245,11 +239,22 @@ line-height: 20px;
 .card-accommodation:hover{
   transform: scale(1.1);
 }
+
+
+ 
+.accommodation-section img{
+  object-fit: cover;
+  width: 100%;
+  height: 124px;
+  border-radius: 20px 20px 0 0;   
+  margin:auto;
+}
   
-.accommodation-section h2{
+
+.accommodation-section h1{
   font-weight : 700;
   font-size: 22px;  
-  margin: 42px 0px 23px 40px;
+  margin: 42px 40px 23px 40px;
 }
   
 .text-picture-accommodation{
@@ -260,10 +265,11 @@ line-height: 20px;
   margin-left: 12px;
 }
   
-.card-accommodation h4{
+.card-accommodation h3{
   font-size: 13px;
   text-align: left;
   margin: 0;
+  
 }
 
 .card-accommodation p{
@@ -298,7 +304,7 @@ line-height: 20px;
 
 .popular-section{
   background: #F2F2F2;
-  width: 30%;
+  width: 35%;
   height: 626px;
   border-radius: 20px;
 }
@@ -308,14 +314,19 @@ line-height: 20px;
   justify-content: space-between;
   flex-direction:row;
   align-items: center;
-  margin-left: 40px;
-  margin-right: 50px;
- 
+  margin: 41px 50px 26px 40px;
+  height: 5%;
 }
+
 
 .fa-chart-line{
   font-size: 25px;
   color: #0065FC;
+}
+
+.popular-section h1{
+  font-weight : 700;
+  font-size: 22px;  
 }
 
 .card-popular{
@@ -365,7 +376,7 @@ line-height: 20px;
     margin-top: 16px;
   }
   
-  .text-picture-popular h4{
+  .text-picture-popular h3{
     font-size: 13px;
     line-height: 118%;
     text-align: left;
@@ -391,7 +402,7 @@ line-height: 20px;
   
 }
 
-.activity-section h2{
+.activity-section h1{
   font-weight: 700;
   font-size: 22px;  
   margin-top: 60px;
@@ -427,7 +438,7 @@ line-height: 20px;
   transform: scale(1.1);
   }
 
-.card-activity h4{
+.card-activity h3{
   font-weight: 700;
   font-size: 16px;
   color: black;
@@ -478,6 +489,12 @@ footer ul{
   list-style-type: none;
 }
 
-@media all and (min-width:768px) and (max-width:992px){
+@media screen and (max-width:992px){
+
+
+}
+
+
+@media screen (max-width:778px){
 
 }
