--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ a{
 header img {
   height: 19px;
   width: 62px;
-  margin-left: 55px;
   margin-top: 44px;
 }
 
@@ -24,6 +23,7 @@ header {
   align-items: center;
   margin-right: 50px;
   padding-right:27px;
+  margin-left: 55px;
 }
 
 header nav{
@@ -40,7 +40,6 @@ nav a{
 }
 
 nav a:hover{
-  border-top: 2px solid #0065FC;
   padding-top: 46px;
   color:blue;
 }
@@ -51,6 +50,7 @@ nav a:hover{
   display: flex;
   flex-direction: column;
   margin-left: 55px;
+  margin-right: 50px;
 }
 
 .tagline-infos {
@@ -60,6 +60,14 @@ nav a:hover{
 }
 
 /*SEARCH BAR*/ 
+
+.searchbar-section{
+  display: flex;
+  flex-direction: column;
+  margin-left: 55px;
+  margin-right: 50px;
+}
+
 
 .search-bar {
   display: flex;
@@ -147,7 +155,7 @@ button:hover {
   align-items: center;
   margin-left: 20px;
   width: auto;
-  height: 48px;
+  height: 50px;
   padding-left: 20px;
 }
 
@@ -202,6 +210,7 @@ button:hover {
   display: flex;
   margin-left: 50px;
   margin-right: 50px;
+  margin-bottom: 60px;
 }
 
 /*ACCOMODATIONS*/
@@ -213,6 +222,7 @@ button:hover {
   height: 626px;
   border-radius: 20px;
   margin-right: 40px;
+  
 }
 .bloc-accommodation{
   margin-right: 40px;
@@ -233,15 +243,12 @@ button:hover {
   box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
   cursor: pointer;
   border:5px solid #ffffff;
-  transition: 0.4s;
 }
 
 .card-accommodation:hover{
   transform: scale(1.1);
 }
 
-
- 
 .accommodation-section img{
   object-fit: cover;
   width: 100%;
@@ -338,7 +345,7 @@ button:hover {
   border-radius: 20px;
   box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: 0.4s;
+  
 }
 
  .card-popular a{
@@ -395,36 +402,32 @@ button:hover {
 
 .activity-section{
   display: flex;
-  width: 100%;
-  height: auto;
   flex-direction: column;
   margin-bottom: 61px; 
+  margin-left: 50px;
+  margin-right: 53px;
   
 }
 
 .activity-section h1{
   font-weight: 700;
   font-size: 22px;  
-  margin-top: 60px;
-  margin-left:50px;
 }
 
 .card-lign{
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  margin-left:50px;
-  margin-right:53px  
+  height: 444.51px;
 }
 
 .card-activity
 {
   width: 22%;
-  height: auto;
+  height: 444.51px;
   border-radius: 20px;
   box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1); 
   cursor: pointer;
-  transition: 0.4s;
 }
 
 .card-activity img{
@@ -439,12 +442,14 @@ button:hover {
   }
 
 .card-activity h3{
+  display: flex;
   font-weight: 700;
   font-size: 16px;
   color: black;
   margin-left: 19px;
   font-weight: 700;
-  margin-top: 20px;
+  margin-top: 10px;
+  align-content: center;
 }
 
 
@@ -491,6 +496,129 @@ footer ul{
 
 @media screen and (max-width:992px){
 
+  .bloc-accommodation-popular{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  /*ACCOMODATIONS*/
+
+
+.accommodation-section{
+  background: #F2F2F2;
+  width: 100%;
+  height: 626px;
+  border-radius: 20px;
+  margin-right: 40px;
+  margin-bottom: 50px;
+}
+.bloc-accommodation{
+  margin-right: 40px;
+  margin-left: 40px;
+}
+
+.card-accommodation{
+  background-color: #FFFFFF;
+  width: 30%;
+  height: 199px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
+  cursor: pointer;
+  border:5px solid #ffffff;
+}
+
+
+
+  /*POPULAR*/
+
+.popular-section{
+  background: #F2F2F2;
+  width: 100%;
+  height: 278px;
+  border-radius: 20px;
+  margin-bottom: 70px;
+}
+
+
+.bloc-popular{
+  display: flex;
+  margin-left: 37px;
+  margin-right: 40px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card-popular{
+  display: flex;
+  width: 30%;
+  height: 144px;
+  background: white;
+  margin-bottom: 33px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
+  cursor: pointer;
+  
+}
+
+/*ACTIVTY*/
+
+.activity-section{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px; 
+  margin-left: 50px;
+  margin-right: 53px;
+}
+
+.card-lign{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 267px;
+}
+
+.card-activity
+{
+  width: 22%;
+  height: 267px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1); 
+  cursor: pointer;
+}
+
+.card-activity img{
+  object-fit: cover;
+  width: 100%;
+  height: 211px;
+  border-radius: 20px 20px 0 0; 
+}
+
+.activity-section h1{
+  font-weight: 700;
+  font-size: 22px;  
+}
+
+
+/*FOOTER*/
+
+footer{
+  
+  background:#F2F2F2;
+  display: flex;
+  margin-left: 48px;
+  margin-right:53px;  
+}
+
+.section-footer{
+  width: 30%;
+  height: auto;
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+}
 
 }
 
