--- a/style.css
+++ b/style.css
@@ -20,13 +20,14 @@ header img {
 header {
   display: flex;
   justify-content: space-between; 
+  flex-direction: row;
   align-items: center;
   margin-right: 50px;
   padding-right:27px;
   margin-left: 55px;
 }
 
-header nav{
+nav{
   display: flex;
   flex-direction: row;
 }
@@ -36,12 +37,10 @@ nav a{
   justify-content: center;
   width:162px;
   padding-top:48px;
-
 }
 
 nav a:hover{
-  padding-top: 46px;
-  color:blue;
+  color:#0065FC;
 }
 
 /*TAGLINE*/
@@ -131,9 +130,10 @@ button:hover {
 .filter-section{
   display: flex;
   flex-direction: row;
+  width: 100%;
   margin-top: 32px;
   margin-left: 62px;
-  margin-right: 50px;
+  border: #0065FC 4px solid;
 }
 
 .title-filter{
@@ -146,6 +146,8 @@ button:hover {
 .allcard-filter{
   display: flex;
   width: 100%;
+  border: #fc0000 4px solid;
+  margin-right: 120px;
 }
 .card-filter{
   border: 2px solid #D9D9D9;
@@ -153,31 +155,35 @@ button:hover {
   border-radius: 25px;
   display: flex;
   align-items: center;
-  margin-left: 20px;
-  width: auto;
+  width: 30%;
   height: 50px;
-  padding-left: 20px;
+  margin-left: 3%;
+  border: #2afc00 4px solid;
 }
 
-.card-filter h3 {
-  font-size: 17px;
-  font-weight: 700;
-  line-height: 21px;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 100%;
-  }
-  
 .card-filter:hover{
   background-color: #DEEBFF;  
   border-color: transparent;
   cursor: pointer;
 }
   
-
 .icon-filter{
   color: #0065FC;
+  margin-left: 20px;
+  margin-right: 10px;
+  border: #2afc00 4px solid;
 }
+
+.card-filter h3{
+  border: #fc7a00 4px solid; 
+font-size: 17px;
+font-weight: 700;
+}
+
+.dog{
+  
+}
+
 
 /*INFOS*/
 
@@ -247,6 +253,7 @@ button:hover {
 
 .card-accommodation:hover{
   transform: scale(1.1);
+  transition:0.4s;
 }
 
 .accommodation-section img{
@@ -345,6 +352,7 @@ button:hover {
   border-radius: 20px;
   box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
   cursor: pointer;
+
   
 }
 
@@ -358,6 +366,8 @@ button:hover {
  }
 .card-popular:hover{
   transform: scale(1.1);
+  transition:0.4s;
+  
   }
 
 .card-popular img {
@@ -622,6 +632,8 @@ footer{
 }
 
 
-@media screen (max-width:778px){
+@media screen and (max-width:778px){
+
+ 
 
 }
