--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@ header {
   justify-content: space-between; 
   flex-direction: row;
   align-items: center;
-  margin-right: 50px;
-  padding-right:27px;
+  margin-right: 67px;
   margin-left: 55px;
 }
 
@@ -41,6 +40,7 @@ nav a{
 
 nav a:hover{
   color:#0065FC;
+  border-top: #0065FC solid 2px;
 }
 
 /*TAGLINE*/
@@ -107,9 +107,7 @@ nav a:hover{
 .search-button{
   font-weight: 700;
   font-size: 18px;
-  text-align: center;
   color: white;
-  padding: 15px 16px;
   background: #0065FC;
   border-style: none;
   height: 52.5px;
@@ -121,8 +119,12 @@ button:hover {
   background-color: #0255d3;
   cursor:pointer;
 }
+
+.text{
+  margin-top: 15px;;
+}
 .fa-search{
-  color: transparent;
+  visibility: hidden;
 }
 
 /*FILTERS*/
@@ -133,20 +135,28 @@ button:hover {
   width: 100%;
   margin-top: 32px;
   margin-left: 62px;
-  border: #0065FC 4px solid;
 }
 
 .title-filter{
+ display: flex;
+ align-items: center;
+}
+
+.filter-section h3{
   display: flex;
   align-items: center;
   font-size: 18px;
   font-weight: 700;
   text-align: center;
 }
+
+.lign-filtre{
+  display: flex;
+  flex-direction: row;
+}
 .allcard-filter{
   display: flex;
   width: 100%;
-  border: #fc0000 4px solid;
   margin-right: 120px;
 }
 .card-filter{
@@ -155,10 +165,24 @@ button:hover {
   border-radius: 25px;
   display: flex;
   align-items: center;
-  width: 30%;
   height: 50px;
-  margin-left: 3%;
-  border: #2afc00 4px solid;
+  margin-left: 20px;
+}
+
+.dog{
+width: 230px;
+}
+
+.money{
+  width: 180px;
+}
+
+.child{
+  width: 140px;
+}
+
+.heart {
+  width: 170px;
 }
 
 .card-filter:hover{
@@ -167,23 +191,43 @@ button:hover {
   cursor: pointer;
 }
   
-.icon-filter{
+.icon-filter .fa-dog{
+  height: 100%;
+  width: 22px;
   color: #0065FC;
-  margin-left: 20px;
-  margin-right: 10px;
-  border: #2afc00 4px solid;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.icon-filter .fa-money-bill-wave{
+  height: 100%;
+  width: 22px;
+  color: #0065FC;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.icon-filter .fa-child{
+  height: 100%;
+  width: 14px;
+  border: #0065FC solid 3px;
+  color: #0065FC;
+  margin-left: 5px;
+  margin-right: 5px;
+  
+}
+.icon-filter .fa-heart{
+  height: 100%;
+ width: 22px;
+  color: #0065FC;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .card-filter h3{
-  border: #fc7a00 4px solid; 
+border: #fc7a00 4px solid; 
 font-size: 17px;
 font-weight: 700;
 }
-
-.dog{
-  
-}
-
 
 /*INFOS*/
 
@@ -506,6 +550,9 @@ footer ul{
 
 @media screen and (max-width:992px){
 
+ 
+  /*ACCOMMODATIONS/POPULAR*/
+
   .bloc-accommodation-popular{
     display: flex;
     justify-content: space-between;
@@ -634,6 +681,316 @@ footer{
 
 @media screen and (max-width:778px){
 
- 
+ /*HEADER*/
+
+header img {
+  height: 19px;
+  width: 62px;
+  margin-top: 21px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between; 
+  flex-direction: column;
+  align-items: center;
+  margin-right: 50px;
+  margin-left: 55px;
+}
+
+nav{
+  display: flex;
+  width:100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+nav a{
+  display: flex;
+  width:50%;
+  padding-bottom: 23px;
+}
+
+nav a:hover{
+  color:#0065FC;
+  border-bottom: #0065FC solid 3px;
+  border-top: none;
+}
+
+/*SEARCH BAR*/ 
+
+.searchbar-section{
+  display: flex;
+  flex-direction: column;
+  margin-left: 55px;
+  margin-right: 50px;
+}
+
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+}
+
+.icon-search {
+  width: 50px;
+  background: #F2F2F2;
+  border: 1px solid #F2F2F2;
+  border-radius: 15px 0px 0px 15px; 
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  
+}
+
+.input {
+  height: 49px;
+  font-size:18px;
+  font-weight: 700;
+  background: white;
+  border: 1px solid #F2F2F2;
+  padding-left: 17px;   
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.input:focus {
+  outline: none;
+    
+}
+.input::placeholder {
+  color:black;
+}
+
+.search-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-items: center; 
+  font-weight: 700;
+  font-size: 18px;
+  color:#0065FC;
+  background: #0065FC;
+  border-style: none;
+  height: 52.5px;
+  width: 132px;
+  border-radius: 0px 15px 15px 0px;
+}
+
+button:hover {
+  background-color: #0255d3;
+  cursor:pointer;
+}
+
+.text{
+  display: none;
+}
+.fa-search{
+  visibility: visible;
+  color: white;
+}
+
+
+/*FILTERS*/
+
+.filter-section{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 32px;
+  margin-left: 62px;
+}
+
+.title-filter{
+ display: flex;
+ align-items: center;
+}
+
+.filter-section h3{
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.lign-filtre{
+  display: flex;
+  flex-direction: column;
+}
+.allcard-filter{
+  display: flex;
+  width: 100%;
+  margin-right: 120px;
+}
+.card-filter{
+  border: 2px solid #D9D9D9;
+  background-color: white;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  height: 50px;
+  width: 160px;
+}
+
+
+.card-filter:hover{
+  background-color: #DEEBFF;  
+  border-color: transparent;
+  cursor: pointer;
+}
+  
+.icon-filter .fa-dog{
+  height: 100%;
+  width: 22px;
+  color: #0065FC;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.icon-filter .fa-money-bill-wave{
+  height: 100%;
+  width: 22px;
+  color: #0065FC;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.icon-filter .fa-child{
+  height: 100%;
+  width: 14px;
+  color: #0065FC;
+  margin-left: 5px;
+  margin-right: 5px;
+  
+}
+.icon-filter .fa-heart{
+  height: 100%;
+ width: 22px;
+  color: #0065FC;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.card-filter h3{
+
+font-size: 11px;
+font-weight: 700;
+}
+
+/*ACCOMMODATIONS/POPULAR*/
+
+.bloc-accommodation-popular{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column-reverse;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+/*ACCOMODATIONS*/
+.lign{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom:12px;
+  flex-direction: column;
+}
+
+.accommodation-section{
+background: #ffffff;
+width: 100%;
+height: 626px;
+margin-right: 40px;
+
+}
+.bloc-accommodation{
+  width: auto;
+  height: auto;
+margin-right: 40px;
+margin-left: 40px;
+border: #0065FC solid 3px;
+}
+
+.card-accommodation{
+background-color: #FFFFFF;
+width: 100%;
+height: 199px;
+border-radius: 20px;
+box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
+cursor: pointer;
+border:5px solid #ffffff;
+border: #0065FC solid 3px;
+margin-bottom:12px;
+}
+
+
+
+/*POPULAR*/
+
+.popular-section{
+  
+background: #F2F2F2;
+width: 100%;
+height: 580px;
+}
+
+
+.bloc-popular{
+display: flex;
+margin-left: 37px;
+margin-right: 40px;
+flex-direction: row;
+justify-content: space-between;
+}
+
+.card-popular{
+display: flex;
+width: 30%;
+height: 144px;
+background: white;
+margin-bottom: 33px;
+border-radius: 20px;
+box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
+cursor: pointer;
+
+}
+
+/*ACTIVTY*/
+
+.activity-section{
+display: flex;
+flex-direction: column;
+margin-bottom: 30px; 
+margin-left: 50px;
+margin-right: 53px;
+}
+
+.card-lign{
+display: flex;
+justify-content: space-between;
+flex-direction: row;
+height: 267px;
+}
+
+.card-activity
+{
+width: 22%;
+height: 267px;
+border-radius: 20px;
+box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1); 
+cursor: pointer;
+}
+
+.card-activity img{
+object-fit: cover;
+width: 100%;
+height: 211px;
+border-radius: 20px 20px 0 0; 
+}
+
+.activity-section h1{
+font-weight: 700;
+font-size: 22px;  
 
 }
