--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ button:hover {
   width: 100%;
   height: 50px;
   margin-right: 20px;
+  
 }
 
 .card-filter:hover{
@@ -177,7 +178,7 @@ button:hover {
 
 .heart{
 
-  width: 170px;
+width: 170px;
 }
 
 .dog{
@@ -187,38 +188,42 @@ width: 220px;
   
 width: 160px;
 }
-.child{
+.person{
   
 width: 130px;
 }
 .icon-filter .fa-dog{
   display: flex;
   align-items: center;
-  color: #0065FC;
-  height: 22px;
-  width: 22px;
+  color: #0065FC; 
+  font-size:19px;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 
 .icon-filter .fa-money-bill-wave{
   display: flex;
   align-items: center;
-  height: 16px;
-  width: 22px;
+  font-size: 16px;
  color: #0065FC;
+ margin-left: 10px;
+ margin-right: 5px;
 }
-.icon-filter .fa-child{
+.icon-filter .fa-person{
   display: flex;
   align-items: center;
-  height: 22px;
-  width: 14px;
+  font-size: 20px;
   color: #0065FC;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 .icon-filter .fa-heart{
   display: flex;
   align-items: center;
-  height: 19px;
-  width: 22px;
+  font-size: 18px;
   color: #0065FC;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 
 
